--- a/meetings/fall2023.md
+++ b/meetings/fall2023.md
@@ -1,7 +1,7 @@
 # Fall 2023 Semester
 
 - September 7: Introduction to git (April)
-- September 14:
+- September 14: Continuation of git (April)
 - September 21:
 - September 28:
 - October 5:
